// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fznxKY ggijNg"
>
  <li
    className="sc-fzoXWK mVXwA"
  >
    <span
      className="sc-fzoLag eWQdQJ"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoXWK mVXwA"
  >
    <span
      className="sc-fzoLag eWQdQJ"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoXWK mVXwA"
  >
    <span
      className="sc-fzoLag eWQdQJ"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fznxKY ggijNg"
>
  <li
    className="sc-fzoXWK sc-fzpmMD bGByno"
  >
    <span
      className="sc-fzoLag eWQdQJ"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoXWK sc-fzpmMD bGByno"
  >
    <span
      className="sc-fzoLag eWQdQJ"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoXWK sc-fzpmMD bGByno"
  >
    <span
      className="sc-fzoLag eWQdQJ"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
